--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "backend for expense tracker",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
+    "start": "node server.js",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
+  },
+  "engines": {
+    "node": "15.5.1"
   },
   "author": "wen jen",
   "license": "MIT",
